Conexion del font con el backend iniciada, completado crud de tickets (Falta listado interactivo))